Update the list of files to not consider

--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,13 @@
 ehthumbs.db
 Thumbs.db
 
-# Other files #
+# Other files and directories #
 ######################
 *.index
 *.vectors
 *.token
 *.model
-
-
+.classpath
+.project
+.settings/
+target/
